# chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Chess.cbp  Makefile  cmake_install.cmake  requirements.txt
doc/: README
src/: listener.hh  main.cc  unitary-test.cc  unitary-test.hh  unitaryTest.cc  unitaryTest.hh  utype.hh
src/ai/: minimax.cc  minimax.hh  negamax.cc  negamax.hh
src/best-listener-2022/: best-listener-2022.cc  best-listener-2022.hh  listener-test-suit.cc  listener-test-suit.hh
src/chess_engine/board/: chessboard.hh  piece.hh  position.hh
src/chessengine/: CMakeLists.txt  chessengine.cc  chessengine.hh
src/chessengine/ai/: CMakeLists.txt
src/chessengine/board/: CMakeLists.txt  chessboard-do.cc  chessboard-impl.cc  chessboard-interface-impl.cc  chessboard-interface-impl.hh  chessboard-interface.hh  chessboard-uci.cc  chessboard-undo.cc  chessboard.cc  chessboard.hh  color.cc  color.hh  listbased-chessboard.cc  matrixbased-chessboard.cc  move-builder.cc  move-builder.hh  move-legality-checker.cc  move.cc  move.hh  piece-move-builder.cc  piece-move-builder.hh  piece-move-generator.cc  piece-type.hh  piece.cc  piece.hh  position.cc  position.hh  position.hxx
src/chessengine/pgn/: CMakeLists.txt  pgn-move.hh  pgn-parser.cc  pgn-parser.hh
src/custom-listeners/: best-listener-2022.cc  best-listener-2022.hh  listener-test-suite.cc  listener-test-suite.hh
src/le-best-listener-2022/: best-listener-2022.cc
src/listeners/: CMakeLists.txt  listener-manager.cc  listener-manager.hh  listener.hh
tests/: Player.py  chessengine  file  pgn-extract  stockfish  test.py  testsuite.py
tests/data/perft/: kiwipete-1.perft  kiwipete-2.perft  kiwipete-4.perft
tests/data/perft/basic/: base_depth-1.perft  base_depth-2.perft  base_depth-3.perft  castling_base_depth-1.perft  castling_base_depth-2.perft  castling_base_depth-3.perft  castling_error_depth-1.perft  castling_error_depth-2.perft  castling_error_depth-3.perft  castling_rook_depth-1.perft  check_promotion_depth-1.perft  check_promotion_depth-2.perft  check_promotion_depth-3.perft  en_passant_choice_depth-1.perft  en_passant_choice_depth-2.perft  facing_rook_depth-1.perft  facing_rook_depth-2.perft  kiwipete-1.perft  kiwipete-2.perft  kiwipete-3.perft  mat_depth-1.perft  pawn_army_depth-1.perft  pawn_army_depth-2.perft  pawn_army_depth-3.perft  pawn_vs_rook_depth-1.perft  pawn_vs_rook_depth-2.perft  pawn_vs_rook_depth-3.perft
tests/data/pgn/: checkmate.sqlite
tests/perft/: kiwipete-3.perft  kiwipete-5.perft
tests/pgn/kasparov/: xx01.pgn  xx02.pgn  xx03.pgn  xx04.pgn  xx05.pgn  xx06.pgn  xx07.pgn  xx08.pgn  xx09.pgn  xx10.pgn  xx100.pgn  xx101.pgn  xx102.pgn  xx103.pgn  xx104.pgn  xx105.pgn  xx106.pgn  xx107.pgn  xx108.pgn  xx109.pgn  xx11.pgn  xx110.pgn  xx111.pgn  xx112.pgn  xx113.pgn  xx114.pgn  xx115.pgn  xx116.pgn  xx117.pgn  xx118.pgn  xx119.pgn  xx12.pgn  xx121.pgn  xx122.pgn  xx123.pgn  xx124.pgn  xx125.pgn  xx126.pgn  xx127.pgn  xx128.pgn  (+507 more)
tests/pgn/kasparov-backup/: xx01.pgn  xx02.pgn  xx03.pgn  xx04.pgn  xx05.pgn  xx06.pgn  xx07.pgn  xx08.pgn  xx09.pgn  xx10.pgn  xx100.pgn  xx101.pgn  xx102.pgn  xx103.pgn  xx104.pgn  xx105.pgn  xx106.pgn  xx107.pgn  xx108.pgn  xx109.pgn  xx11.pgn  xx110.pgn  xx111.pgn  xx112.pgn  xx113.pgn  xx114.pgn  xx115.pgn  xx116.pgn  xx117.pgn  xx118.pgn  xx119.pgn  xx12.pgn  xx120.pgn  xx121.pgn  xx122.pgn  xx123.pgn  xx124.pgn  xx125.pgn  xx126.pgn  xx127.pgn  (+509 more)
tests/test-suite/: pgn.py  test.py
tests/tsuite-files/: alter_pgn.py  perft.py  pgn.py  test.py  uci_match.py
tests/tutorial-env/: pyvenv.cfg
tools/: perft.py  pgn-extract  requirements.txt
